// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`embeds > should include alt-text embed if present 1`] = `
[
  {
    "author": {
      "name": "Comic Title",
    },
    "footer": {
      "icon_url": "https://static.yeagers.co/comic-bot/alt-text.png",
      "text": "Alt text.",
    },
    "image": {
      "url": "https://localhost/image.png",
    },
    "title": "Comic 1",
    "url": "https://localhost/comic",
  },
]
`;

exports[`embeds > should include embeds from multiple pages 1`] = `
[
  {
    "author": {
      "name": "Comic Title",
    },
    "description": "Page 1",
    "footer": {
      "icon_url": "https://static.yeagers.co/comic-bot/alt-text.png",
      "text": "Alt text start.",
    },
    "image": {
      "url": "https://localhost/image-start.png",
    },
    "title": "Comic 1",
    "url": "https://localhost/comic",
  },
  {
    "description": "Page 2",
    "footer": {
      "icon_url": "https://static.yeagers.co/comic-bot/alt-text.png",
      "text": "Alt text next.",
    },
    "image": {
      "url": "https://localhost/image-next.png",
    },
  },
  {
    "description": "Page 3",
    "footer": {
      "icon_url": "https://static.yeagers.co/comic-bot/alt-text.png",
      "text": "Alt text end.",
    },
    "image": {
      "url": "https://localhost/image-end.png",
    },
  },
]
`;

exports[`embeds > should not include alt-text embed if missing 1`] = `
[
  {
    "author": {
      "name": "Comic Title",
    },
    "image": {
      "url": "https://localhost/image.png",
    },
    "title": "Comic 1",
    "url": "https://localhost/comic",
  },
]
`;
